--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,6 +1,8 @@
 name: Waka Readme
 
 on:
+  push:
+    branches: [main]
   workflow_dispatch:
   schedule:
     # Runs at every 12AM UTC
@@ -8,12 +10,14 @@ on:
 
 jobs:
   update-readme:
-    name: Update this repo's README
+    name: Update the WakaTime Stat
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GITHUB_TOKEN: ${{ github.token }}
+          BRANCH: "main"
           SHOW_UPDATED_DATE: "True"
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROFILE_VIEWS: "True"
